# MEDS-Inspect

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  MANIFEST.in  README.md  pyproject.toml  render.yaml  requirements.txt  task_extraction.txt  visualization.ipynb
.github/workflows/: python-build.yaml  tests.yaml
src/: app.py  cache_results.py  meds_reader_convert.ipynb  requirements.txt  utils.py
src/MEDS-Inspect/: __main__.py  app.py  utils.py
src/MEDS_Inspect/: __main__.py  app.py  cache_results.py  code_search.py  utils.py
src/MEDS_Inspect/assets/MIMIC-IV-DEMO-MEDS/metadata/: dataset.json
src/MEDS_Inspect/assets/MIMIC-IV-DEMO-MEDS/tasks/: ICU Mortality first 24h.parquet
src/MEDS_Inspect/cache/: __main__.py  cache_results.py
src/MEDS_Inspect/configs/: general.yaml
src/meds-inspect/: app.py  cache_results.py
src/meds-vis/: app.py  cache_results.py  code_search.py  meds_reader.py
tests/: test_integration_mimic_demo.py
